@@ -79,7 +79,6 @@ function FindPlayer(info)
 	end
 
 	-- Find by RP Name
-	print(info, type(info), string.lower(info))
 	for k, v in pairs(pls) do
 		if string.find(string.lower(v:SteamName()), string.lower(tostring(info)), 1, true) ~= nil then
 			return v
